<resources>
    <string name="app_name" translatable="false">QuestMaster</string>
    <string name="home" translatable="false">Home</string>
    <string name="profile">Profile</string>
    <string name="make_a_quest">Make a Quest</string>

    <string name="button">button</string>
    <string name="menu_button">menu button status bar</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="user_description">User description</string>
    <string name="username" translatable="false">Username</string>
    <string name="create_quest">Create quest</string>
    <string name="menu_icon">Menu icon</string>
    <string name="email" translatable="false">e-mail</string>
    <string name="password" translatable="false">password</string>
    <string name="login" translatable="false">login</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="login_with_google">login with Google</string>
    <string name="or">Or</string>
    <string name="check_email">Check your email</string>
    <string name="check_password">Check your password</string>
    <string name="passwords_do_not_match">passwords do not match</string>
    <string name="username_is_required">username is required</string>
    <string name="confirm_password">confirm password</string>
    <string name="signup">Signup</string>
    <string name="login_image">login image</string>
    <string name="app_sign_up">QuestMaster - Sign up</string>
    <string name="password_requirements">The password must be at least 7 char long,
                                    contain at least one lower and one upper
                                    case letter and a number</string>


    <string name="quest_name">Quest Name</string>
    <string name="quest_description">Quest Description</string>
    <string name="points_per_quest" translatable="false">Points Per Quest </string>
    <string name="map_preview">Map Preview</string>
    <string name="save">Save</string>
    <string name="welcome_back_adventurer">Welcome Back Adventurer!</string>
    <string name="do_you_already_have_an_account">do you already have an account?</string>
    <string name="add_a_comment">add a comment</string>
    <string name="comments">Comments</string>
    <string name="post">post</string>
    <string name="share_button">share button</string>
    <string name="star_button">star button</string>
    <string name="quest_map_or_images">quest map or images</string>

    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="dark_mode" translatable="false">Dark Mode</string>
    <string name="language">Language</string>
    <string name="localization">Localization</string>
    <string name="country_region_city">Country/Region/City</string>
    <string name="notifications">Notifications</string>
    <string name="new_quest_alerts">New Quest Alerts</string>
    <string name="comment_notifications">Comment Notifications</string>
    <string name="about">About</string>
    <string name="app_info" translatable="false">App Info</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="quest_image_map">quest image/map</string>
    <string name="edit_username">edit username</string>
    <string name="edit_description">edit description</string>
    <string name="saved_quests">Saved Quests</string>
    <string name="error_user_not_found">ERROR! user not found</string>
    <string name="error_invalid_credentials">ERROR! Invalid credentials</string>
    <string name="authentication_failed">ERROR! Authentication failed</string>
    <string name="title_home" translatable="false">HOME</string>
    <string name="i_have_to_signup">I have to Signup</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="logout">Logout</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="your_score">Your Score</string>
    <string name="ppq" translatable="false">PPQ</string>
    <string name="score">"Score: "</string>
    <string name="complete_quest">Complete Quest</string>
    <string name="delete_image">Delete Image</string>
    <string name="scroll_images">scroll images</string>
    <string name="starting_point">Starting Point</string>
    <string name="search">Search</string>
    <string name="ending_point">Ending Point</string>
    <string name="location">Location</string>
    <string name="image_visualizer">image visualizer</string>
    <string name="delete_quest">Delete Quest</string>
    <string name="_0" translatable="false">0</string>
    <string name="privacy">Privacy</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="clear_search_history_dialog_message">Are you sure you want to clear your search history?</string>
    <string name="history_cleared">Search history cleared</string>
    <string name="cancel">Cancel</string>

</resources>